added files test and set up js files

--- a/test.html
+++ b/test.html
@@ -17,5 +17,14 @@
   <script>
     mocha.run()
   </script>
+  <script src="shoppingList.js"></script>
 </body>
 </html>
+
+
+
+
+<!-- use script tags not require since this is front end not back end -->
+
+<!-- using native http way                                            -->
+<!-- code will create a global object                                 -->
