started test file for shopping list item

--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <h1>Shopping list</h1>
+  <div id="content"></div>
   <div id='mocha'></div>
   <script src='./node_modules/mocha/mocha.js'></script>
   <script src='./node_modules/chai/chai.js'></script>
@@ -18,6 +20,7 @@
     mocha.run()
   </script>
   <script src="shoppingList.js"></script>
+  <script src="test.js"></script>
 </body>
 </html>
 
