--- a/test.html
+++ b/test.html
@@ -12,10 +12,10 @@
   <div id='mocha'></div>
   <script src='./node_modules/mocha/mocha.js'></script>
   <script src='./node_modules/chai/chai.js'></script>
-  <script src='./js/shopping_list_item.js'></script>
-  <script src='./js/shopping_list.js'></script>
+  <script src='./shopping_list_item.js'></script>
+  <script src='./shoppingList.js'></script>
   <script>mocha.setup('bdd')</script>
-  <script src='./js/shopping_list_test.js'></script>
+  <script src='./test/shopping_list_test.js'></script>
   <script>
     mocha.run()
   </script>
