made some changes with the tests

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Shopping list</h1>
+  <h1>Shopping list TDD</h1>
   <div id="content"></div>
   <div id='mocha'></div>
   <script src='./node_modules/mocha/mocha.js'></script>
